# virtualization-rs

./: Cargo.toml  LICENSE.md  Makefile  README.md  virtualization_rs.entitlements
examples/: simplevm.rs
src/: base.rs  lib.rs
src/virtualization/: boot_loader.rs  entropy_device.rs  graphics_device.rs  keyboard.rs  memory_device.rs  mod.rs  network_device.rs  pointing_device.rs  serial_port.rs  socket_device.rs  storage_device.rs  virtual_machine.rs
