[package]
name = "virtualization-rs"
version = "0.1.0"
authors = ["s.suzugamine <s.suzugamine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.82"
objc = "0.2.7"
block = "0.1.6"
structopt = "0.3.21"